--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <p>Published 21 Dec 2023</p>
 
-        <a href="" class="title">HTML & CSS foundations</a>
+        <h1>HTML & CSS foundations</h1>
 
         <p id="description">These languages are the backbone of every website, defining structure, content, and
           presentation.</p>
